--- a/20250827_ekstraklasa2425.html
+++ b/20250827_ekstraklasa2425.html
@@ -82,7 +82,7 @@
     .pill[data-type="H"]{ box-shadow: 0 0 0 1px rgba(59,130,246,.35) inset; }
     .pill[data-type="D"]{ box-shadow: 0 0 0 1px rgba(245,158,11,.35) inset; }
     .pill[data-type="A"]{ box-shadow: 0 0 0 1px rgba(34,197,94,.35) inset; }
-    .pill.active{ background:linear-gradient(180deg,#1f2937,#0b1222); transform:translateY(-1px); }
+    .pill.active{ background:linear-gradient(180deg,aqua,lime); transform:translateY(-1px); }
 
     .footer-note{ color:var(--muted); font-size:12px; padding:10px 14px; }
 
