--- a/20250827_ekstraklasa2425.html
+++ b/20250827_ekstraklasa2425.html
@@ -135,10 +135,9 @@
           <label for="roundSelect">Kolejka</label>
           <select id="roundSelect" aria-label="Wybierz kolejkę"></select>
         </div>
-        <button class="btn-reset" id="resetBtn" title="Wyczyść wszystkie wyniki">Wyczyść wyniki</button>
       </div>
       <div id="matchesWrap"></div>
-      <div class="footer-note">Dotknij wynik, aby ustawić: <b>1–0</b> (gospodarz), <b>1–1</b> (remis), <b>0–1</b> (gość). Dane zapisywane są w <code>localStorage</code> pod kluczem <code>liga_pilka_2425</code>.</div>
+      <div class="footer-note">Dotknij wynik, aby ustawić: <b>1–0</b> (gospodarz), <b>1–1</b> (remis), <b>0–1</b> (gość).</div>
     </section>
   </main>
 
