--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250827_pilka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756314196/football_wok6tv.png" alt="Piłka Nożna">
+                <span>Piłka Nożna</span>
+            </a>
             <a href="20250827_ekstraklasa2425.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756296439/liga2425_pz1niz.png" alt="Liga 2025">
                 <span>Liga 2025</span>
