--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,6 +121,20 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
+  {emoji:'🌶️', pl:'Papryczka Chili', en:'Chili Pepper', others:['chilly pepper', 'hot chili', 'papryczka chili']},
+  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata']},
+  {emoji:'🫒', pl:'Oliwka', en:'Olive', others:['oliv', 'green olive', 'oliwka']},
+  {emoji:'🥦', pl:'Brokuła', en:'Broccoli', others:['brocoli', 'fresh broccoli', 'brokula']},
+  {emoji:'🍇', pl:'Winogrono', en:'Grapes', others:['graps', 'green grapes', 'winogrono']},
+  {emoji:'🍆', pl:'Bakłażan', en:'Eggplant', others:['egg plant', 'aubergine', 'baklazan']},
+  {emoji:'🍠', pl:'Batat', en:'Sweet Potato', others:['sweet potatto', 'yam', 'batat']},
+  {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['cocnut', 'fresh coconut', 'kokos']},
+  {emoji:'🧄', pl:'Czosnek', en:'Garlic', others:['garlick', 'clove of garlic', 'czosnek']},
+  {emoji:'🌰', pl:'Kasztan', en:'Chestnut', others:['chestnutt', 'brown chestnut', 'kasztan']},
+  {emoji:'🥜', pl:'Orzeszek', en:'Peanut', others:['peanutt', 'groundnut', 'orzeszek']},
+  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']}
+     ],
+     medium:[
   {emoji:'🦚', pl:'Paw', en:'Peacock', others:['peacok', 'colorful peacock', 'paw']},
   {emoji:'🦐', pl:'Krewetka', en:'Shrimp', others:['shrip', 'prawn', 'krewetka']},
   {emoji:'🦞', pl:'Homar', en:'Lobster', others:['lobstr', 'big lobster', 'homar']},
@@ -129,9 +143,38 @@
   {emoji:'🪲', pl:'Chrząszcz', en:'Beetle', others:['beetl', 'scarab beetle', 'chrzaszcz']},
   {emoji:'🦟', pl:'Komar', en:'Mosquito', others:['moskito', 'mosqueto', 'komar']},
   {emoji:'🪳', pl:'Karaluch', en:'Cockroach', others:['cokroach', 'roach', 'karaluch']},
-  {emoji:'🪱', pl:'Dżdżownica', en:'Earthworm', others:['earth worm', 'worm', 'dzdzownica']}
+  {emoji:'🪱', pl:'Dżdżownica', en:'Earthworm', others:['earth worm', 'worm', 'dzdzownica']},
+  {emoji:'🥒', pl:'Ogórek', en:'Cucumber', others:['cucamber', 'green cucumber', 'ogorek']},
+  {emoji:'🫐', pl:'Borówka', en:'Blueberry', others:['bluebery', 'wild blueberry', 'borowka']},
+  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
+  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
+  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
+  {emoji:'🦛', pl:'Hipopotam', en:'Hippopotamus', others:['hipo', 'hippopotam', 'hipopotam']},
+  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
+  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
+  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
+  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
+  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
+  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']}
      ],
-     medium:[
+     hard:[
+  {emoji:'🥔', pl:'Ziemniak', en:'Potato', others:['potatto', 'raw potato', 'ziemniak']},
+  {emoji:'🧅', pl:'Cebula', en:'Onion', others:['onoin', 'red onion', 'cebula']},
+  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
+  {emoji:'🫑', pl:'Papryka', en:'Pepper', others:['bell pepper', 'green pepper', 'papryka']},
+  {emoji:'🥝', pl:'Kiwi', en:'Kiwi', others:['kiwee', 'kiwi fruit', 'kiwi']},
+  {emoji:'🥑', pl:'Awokado', en:'Avocado', others:['avokado', 'ripe avocado', 'awokado']},
+  {emoji:'🍑', pl:'Brzoskwinia', en:'Peach', others:['peech', 'sweet peach', 'brzoskwinia']},
+  {emoji:'🍊', pl:'Pomarańcza', en:'Orange', others:['orenge', 'fresh orange', 'pomarancza']},
+  {emoji:'🥕', pl:'Marchewka', en:'Carrot', others:['carot', 'orange carrot', 'marchewka']},
+  {emoji:'🥭', pl:'Mango', en:'Mango', others:['mengo', 'sweet mango', 'mango']},
+  {emoji:'🍍', pl:'Ananas', en:'Pineapple', others:['pineaple', 'tropical pineapple', 'ananas']},
+  {emoji:'🍌', pl:'Banan', en:'Banana', others:['bananna', 'yellow banana', 'banan']},
+  {emoji:'🌽', pl:'Kukurydza', en:'Corn', others:['corne', 'sweet corn', 'kukurydza']},
+  {emoji:'🍋', pl:'Cytryna', en:'Lemon', others:['lemmon', 'yellow lemon', 'cytryna']},
+  {emoji:'🍈', pl:'Melon', en:'Melon', others:['mellon', 'green melon', 'melon']},
+  {emoji:'🍐', pl:'Gruszka', en:'Pear', others:['pearr', 'green pear', 'gruszka']},
+  {emoji:'🍉', pl:'Arbuz', en:'Watermelon', others:['watermellon', 'juicy watermelon', 'arbuz']},
   {emoji:'🦬', pl:'Żubr', en:'Bison', others:['bisonn', 'wild bison', 'zubr']},
   {emoji:'🦭', pl:'Foka', en:'Seal', others:['seel', 'sea seal', 'foka']},
   {emoji:'🐚', pl:'Muszla', en:'Seashell', others:['sea shell', 'shell', 'muszla']},
@@ -153,26 +196,16 @@
   {emoji:'🦂', pl:'Skorpion', en:'Scorpion', others:['scorpian', 'desert scorpion', 'skorpion']},
   {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']},
   {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
-  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
   {emoji:'🥀', pl:'Zwiędła Kwiat', en:'Wilted Flower', others:['wilted flowr', 'dead flower', 'zwiedla kwiat']},
-  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
-  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
-  {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
   {emoji:'🐗', pl:'Dzik', en:'Boar', others:['boarr', 'wild pig', 'dzik']},
   {emoji:'🐃', pl:'Wół Wodny', en:'Water Buffalo', others:['buffalo', 'buffallo', 'wol wodny']},
-  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']},
-  {emoji:'🦛', pl:'Hipopotam', en:'Hippopotamus', others:['hipo', 'hippopotam', 'hipopotam']},
   {emoji:'🦒', pl:'Żyrafa', en:'Giraffe', others:['girafe', 'giraff', 'zyrafa']},
-  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
-  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
-  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
-  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
   {emoji:'🦦', pl:'Wydra', en:'Otter', others:['ottr', 'river otter', 'wydra']},
-  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
   {emoji:'🕊️', pl:'Gołąb', en:'Dove', others:['dov', 'pigeon', 'golab']},
-  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']}
-     ],
-     hard:[
+  {emoji:'🍓', pl:'Truskawka', en:'Strawberry', others:['strawbery', 'red strawberry', 'truskawka']},
+  {emoji:'🍒', pl:'Wiśnia', en:'Cherry', others:['chery', 'sweet cherry', 'wisnia']},
+  {emoji:'🍎', pl:'Jabłko', en:'Apple', others:['aple', 'red apple', 'jablko']},
+  {emoji:'🍅', pl:'Pomidor', en:'Tomato', others:['tomatto', 'red tomato', 'pomidor']},
   {emoji:'🕷️', pl:'Pająk', en:'Spider', others:['spidr', 'black spider', 'pajak']},
   {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
   {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
@@ -534,7 +567,7 @@
         .filter(Boolean).map(normalizeAnswer);
       if(accepted.includes(answer)){
         score += 1;
-        const bonus = (roundCount === 1) ? 3 : 1;
+        const bonus = (roundCount === 1) ? 4 : 1;
         timeLeft += bonus;
         updateHUD();
         guessInput.value = '';
