--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,20 +121,86 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'🌶️', pl:'Papryczka Chili', en:'Chili Pepper', others:['chilly pepper', 'hot chili', 'papryczka chili']},
-  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata']},
-  {emoji:'🫒', pl:'Oliwka', en:'Olive', others:['oliv', 'green olive', 'oliwka']},
-  {emoji:'🥦', pl:'Brokuła', en:'Broccoli', others:['brocoli', 'fresh broccoli', 'brokula']},
-  {emoji:'🍇', pl:'Winogrono', en:'Grapes', others:['graps', 'green grapes', 'winogrono']},
-  {emoji:'🍆', pl:'Bakłażan', en:'Eggplant', others:['egg plant', 'aubergine', 'baklazan']},
-  {emoji:'🍠', pl:'Batat', en:'Sweet Potato', others:['sweet potatto', 'yam', 'batat']},
-  {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['cocnut', 'fresh coconut', 'kokos']},
-  {emoji:'🧄', pl:'Czosnek', en:'Garlic', others:['garlick', 'clove of garlic', 'czosnek']},
-  {emoji:'🌰', pl:'Kasztan', en:'Chestnut', others:['chestnutt', 'brown chestnut', 'kasztan']},
-  {emoji:'🥜', pl:'Orzeszek', en:'Peanut', others:['peanutt', 'groundnut', 'orzeszek']},
-  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']}
+  {emoji:'🥣', pl:'Miska', en:'Bowl', others:['bolw', 'soup bowl', 'miska']},
+  {emoji:'🥤', pl:'Słomka', en:'Straw', others:['staw', 'drinking straw', 'slomka']},
+  {emoji:'🍸', pl:'Wykałaczka', en:'Toothpick', others:['coctail', 'martini glass', 'wykalaczka']},
+  {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['chopstiks', 'wooden chopsticks', 'paleczki']},
+  {emoji:'🍴', pl:'Sztućce', en:'Cutlery', others:['cuttlery', 'fork and knife', 'sztucce']},
+  {emoji:'🍽️', pl:'Talerz', en:'Plate', others:['plait', 'dinner plate', 'talerz']}
      ],
      medium:[
+  {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:['teepot', 'ceramic teapot', 'czajnik']},
+  {emoji:'🍹', pl:'Koktajl', en:'Cocktail', others:['coctel', 'fruit cocktail', 'koktajl']},
+  {emoji:'🥄', pl:'Łyżka', en:'Spoon', others:['spone', 'silver spoon', 'lyzka']},
+  {emoji:'🔪', pl:'Nóż', en:'Knife', others:['knive', 'sharp knife', 'noz']},
+  {emoji:'🥐', pl:'Rogalik', en:'Croissant', others:['croisant', 'french croissant', 'rogalik']},
+  {emoji:'🥖', pl:'Baguetka', en:'Baguette', others:['baguet', 'french baguette', 'baguetka']},
+  {emoji:'🥓', pl:'Bekon', en:'Bacon', others:['baconn', 'crispy bacon', 'bekon']},
+  {emoji:'🍝', pl:'Spaghetti', en:'Spaghetti', others:['spagetti', 'italian spaghetti', 'spagetti']},
+  {emoji:'🥫', pl:'Puszka', en:'Can', others:['cann', 'food can', 'puszka']},
+  {emoji:'🥡', pl:'Pudełko na Wynos', en:'Takeout Box', others:['take out box', 'chinese takeout', 'pudelko na wynos']},
+  {emoji:'🥟', pl:'Pieróg', en:'Dumpling', others:['dumplling', 'chinese dumpling', 'pierog']},
+  {emoji:'🍢', pl:'Szaszłyk', en:'Skewer', others:['skever', 'meat skewer', 'szaszlyk']},
+  {emoji:'🍭', pl:'Lizak', en:'Lollipop', others:['loly pop', 'sweet lollipop', 'lizak']},
+  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata']},
+  {emoji:'🧄', pl:'Czosnek', en:'Garlic', others:['garlick', 'clove of garlic', 'czosnek']},
+  {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']},
+  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
+  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
+  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
+  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
+  {emoji:'🌰', pl:'Kasztan', en:'Chestnut', others:['chestnutt', 'brown chestnut', 'kasztan']},
+  {emoji:'🥜', pl:'Orzeszek', en:'Peanut', others:['peanutt', 'groundnut', 'orzeszek']},
+  {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['cocnut', 'fresh coconut', 'kokos']},
+  {emoji:'🍯', pl:'Miód', en:'Honey', others:['hony', 'sweet honey', 'miod']},
+     ],
+     hard:[
+  {emoji:'🍠', pl:'Batat', en:'Sweet Potato', others:['sweet potatto', 'yam', 'batat']},
+  {emoji:'🍺', pl:'Piwo', en:'Beer', others:['bear', 'glass of beer', 'piwo']},
+  {emoji:'🍾', pl:'Szampan', en:'Champagne', others:['champain', 'bottle of champagne', 'szampan']},
+  {emoji:'🍷', pl:'Wino', en:'Wine', others:['whine', 'glass of wine', 'wino']},
+  {emoji:'🥃', pl:'Drink', en:'Drink', others:['drinc', 'whiskey glass', 'drink']},
+  {emoji:'🧋', pl:'Bubble Tea', en:'Bubble Tea', others:['bubbletee', 'boba tea', 'buble tea']},
+  {emoji:'🧃', pl:'Soczek', en:'Juice', others:['juce', 'fruit juice', 'soczek']},
+  {emoji:'🥛', pl:'Mleko', en:'Milk', others:['milkk', 'glass of milk', 'mleko']},
+  {emoji:'🍼', pl:'Butelka', en:'Bottle', others:['bottel', 'baby bottle', 'butelka']},
+  {emoji:'🍵', pl:'Herbata', en:'Tea', others:['tee', 'hot tea', 'herbata']},
+  {emoji:'☕', pl:'Kawa', en:'Coffee', others:['cofee', 'cup of coffee', 'kawa']},
+  {emoji:'🧂', pl:'Sól', en:'Salt', others:['salte', 'table salt', 'sol']},
+  {emoji:'🧈', pl:'Masło', en:'Butter', others:['buter', 'creamy butter', 'maslo']},
+  {emoji:'🍿', pl:'Popkorn', en:'Popcorn', others:['popkornn', 'buttered popcorn', 'popcorn']},
+  {emoji:'🧊', pl:'Lód', en:'Ice', others:['icee', 'ice cube', 'lod']},
+  {emoji:'🍲', pl:'Zupa', en:'Soup', others:['soop', 'hot soup', 'zupa']},
+  {emoji:'🫕', pl:'Grill', en:'Grill', others:['gril', 'bbq grill', 'grill']},
+  {emoji:'🍤', pl:'Krewetka', en:'Shrimp', others:['shrimpf', 'grilled shrimp', 'krewetka']},
+  {emoji:'🍦', pl:'Lody', en:'Ice Cream', others:['icecream', 'soft serve', 'lody']},
+  {emoji:'🎂', pl:'Tort', en:'Cake', others:['cak', 'birthday cake', 'tort']},
+  {emoji:'🧁', pl:'Mufinka', en:'Muffin', others:['cupcak', 'sweet cupcake', 'mufinka', 'cupcake']},
+  {emoji:'🍬', pl:'Cukierek', en:'Candy', others:['candyz', 'sweet candy', 'cukierek']},
+  {emoji:'🍫', pl:'Czekolada', en:'Chocolate', others:['choclate', 'dark chocolate', 'czekolada']},
+  {emoji:'🍩', pl:'Oponka', en:'Donut', others:['doughnut', 'sweet donut', 'donat']},
+  {emoji:'🍪', pl:'Ciastko', en:'Cookie', others:['coockie', 'sweet cookie', 'ciastko']},
+  {emoji:'🥨', pl:'Precel', en:'Pretzel', others:['pretzell', 'salty pretzel', 'precel']},
+  {emoji:'🍟', pl:'Frytki', en:'Fries', others:['frize', 'french fries', 'frytki']},
+  {emoji:'🍕', pl:'Pizza', en:'Pizza', others:['piza', 'slice of pizza', 'pizza']},
+  {emoji:'🍚', pl:'Ryż', en:'Rice', others:['ricce', 'white rice', 'ryz']},
+  {emoji:'🥩', pl:'Mięso', en:'Meat', others:['meatt', 'piece of meat', 'mieso']},
+  {emoji:'🍗', pl:'Kurczak', en:'Chicken', others:['chiken', 'roasted chicken', 'kurczak']},
+  {emoji:'🍔', pl:'Hamburger', en:'Hamburger', others:['hamberger', 'burger', 'hamburger']},
+  {emoji:'🌭', pl:'Hot Dog', en:'Hot Dog', others:['hotdog', 'sausage roll', 'hot dog']},
+  {emoji:'🥪', pl:'Kanapka', en:'Sandwich', others:['sandwitch', 'club sandwich', 'kanapka']},
+  {emoji:'🧇', pl:'Gofr', en:'Waffle', others:['waffel', 'crispy waffle', 'gofr']},
+  {emoji:'🥞', pl:'Naleśnik', en:'Pancake', others:['pancacke', 'stack of pancakes', 'nalesnik']},
+  {emoji:'🥚', pl:'Jajko', en:'Egg', others:['eg', 'boiled egg', 'jajko']},
+  {emoji:'🧀', pl:'Ser', en:'Cheese', others:['cheez', 'slice of cheese', 'ser']},
+  {emoji:'🍞', pl:'Chleb', en:'Bread', others:['bred', 'loaf of bread', 'chlep']},
+  {emoji:'🍆', pl:'Bakłażan', en:'Eggplant', others:['egg plant', 'aubergine', 'baklazan']},
+  {emoji:'🌶️', pl:'Papryczka Chili', en:'Chili Pepper', others:['chilly pepper', 'hot chili', 'papryczka chili', 'pepper chili']},
+  {emoji:'🫒', pl:'Oliwka', en:'Olive', others:['oliv', 'green olive', 'oliwka']},
+  {emoji:'🥦', pl:'Brokuła', en:'Broccoli', others:['brocoli', 'fresh broccoli', 'brokula']},
+  {emoji:'🍇', pl:'Winogrono', en:'Grapes', others:['graps', 'green grapes', 'winogrono', 'grape']},
+  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
+  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']},
   {emoji:'🦚', pl:'Paw', en:'Peacock', others:['peacok', 'colorful peacock', 'paw']},
   {emoji:'🦐', pl:'Krewetka', en:'Shrimp', others:['shrip', 'prawn', 'krewetka']},
   {emoji:'🦞', pl:'Homar', en:'Lobster', others:['lobstr', 'big lobster', 'homar']},
@@ -150,14 +216,6 @@
   {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
   {emoji:'🦝', pl:'Szop', en:'Raccoon', others:['racoon', 'trash panda', 'szop']},
   {emoji:'🦛', pl:'Hipopotam', en:'Hippopotamus', others:['hipo', 'hippopotam', 'hipopotam']},
-  {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
-  {emoji:'🦫', pl:'Bóbr', en:'Beaver', others:['beavr', 'water beaver', 'bobr']},
-  {emoji:'🦡', pl:'Borsuk', en:'Badger', others:['badjer', 'wild badger', 'borsuk']},
-  {emoji:'🦔', pl:'Jeż', en:'Hedgehog', others:['hedghog', 'spiky hedgehog', 'jez']},
-  {emoji:'🐓', pl:'Kogut', en:'Rooster', others:['roostr', 'cock', 'kogut']},
-  {emoji:'🦢', pl:'Łabędź', en:'Swan', others:['swaan', 'white swan', 'labedz']}
-     ],
-     hard:[
   {emoji:'🥔', pl:'Ziemniak', en:'Potato', others:['potatto', 'raw potato', 'ziemniak']},
   {emoji:'🧅', pl:'Cebula', en:'Onion', others:['onoin', 'red onion', 'cebula']},
   {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
