--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,16 +121,54 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
+  {emoji:'🚧', pl:'Blokada', en:'Roadblock', others:['rodblock', 'construction barrier', 'blokada']},
+  {emoji:'⛽', pl:'Stacja Paliw', en:'Fuel Station', others:['fuel staton', 'gas station', 'stacja paliw']},
+  {emoji:'🛢️', pl:'Beczka', en:'Barrel', others:['barel', 'oil barrel', 'beczka']},
+  {emoji:'🧭', pl:'Kompas', en:'Compass', others:['compas', 'navigation compass', 'kompas']},
+  {emoji:'⚓', pl:'Kotwica', en:'Anchor', others:['anhor', 'ship anchor', 'kotwica']},
+  {emoji:'🚇', pl:'Metro', en:'Subway', others:['subwey', 'metro station', 'metro']},
+  {emoji:'🚦', pl:'Światła', en:'Traffic Lights', others:['trafic lights', 'signal lights', 'swietla']},
+  {emoji:'🦼', pl:'Manualny Wózek Inwalidzki', en:'Mobility Scooter', others:['mobility scoter', 'disabled scooter', 'pojazd dla niepelnosprawnych']},
+  {emoji:'🚐', pl:'Bus', en:'Van', others:['vann', 'minibus', 'bus']},
+  {emoji:'🛺', pl:'Melex', en:'Rickshaw', others:['rikshaw', 'auto rickshaw', 'melex']},
+     ],
+     medium:[
+  {emoji:'🛵', pl:'Skuter', en:'Scooter', others:['motorscoter', 'scooter bike', 'skuter', 'Motor Scooter']},
+  {emoji:'🏍️', pl:'Motor', en:'Motorcycle', others:['motorcicle', 'bike motorcycle', 'motor']},
+  {emoji:'🛑', pl:'Znak', en:'Sign', others:['stop signe', 'traffic sign', 'znak', 'Stop Sign']},
+  {emoji:'🚨', pl:'Kogut Policyjny', en:'Police Light', others:['police ligt', 'emergency light', 'kogut policyjny']},
+  {emoji:'🚏', pl:'Przystanek', en:'Bus Stop', others:['buss stop', 'station sign', 'przystanek']},
+  {emoji:'🛴', pl:'Hulajnoga', en:'Scooter', others:['scoter', 'kick scooter', 'hulajnoga']},
+  {emoji:'🦽', pl:'Wózek Inwalidzki', en:'Wheelchair', others:['wheelechair', 'manual wheelchair', 'wozek inwalidzki']},
+  {emoji:'🚲', pl:'Rower', en:'Bicycle', others:['bycicle', 'bike', 'rower']},
+  {emoji:'🚛', pl:'Tir', en:'Truck', others:['truk', 'cargo truck', 'tir']},
+  {emoji:'🚜', pl:'Traktor', en:'Tractor', others:['tractorr', 'farm tractor', 'traktor']},
+  {emoji:'🏎️', pl:'Formuła', en:'Race Car', others:['race carr', 'formula car', 'formula']},
+  {emoji:'🚒', pl:'Wóz Strażacki', en:'Fire Truck', others:['firetruk', 'fire engine', 'woz strazacki']},
+  {emoji:'🚑', pl:'Karetka', en:'Ambulance', others:['ambulans', 'emergency ambulance', 'karetka']},
+  {emoji:'🚓', pl:'Policja', en:'Police Car', others:['police carr', 'cop car', 'policja']},
+  {emoji:'🚙', pl:'Samochód', en:'Car', others:['carr', 'family car', 'samochod']},
+  {emoji:'🍹', pl:'Koktajl', en:'Cocktail', others:['coctel', 'fruit cocktail', 'koktajl']},
+  {emoji:'🍢', pl:'Szaszłyk', en:'Skewer', others:['skever', 'meat skewer', 'szaszlyk']},
+  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata', 'salad']},
   {emoji:'🥣', pl:'Miska', en:'Bowl', others:['bolw', 'soup bowl', 'miska']},
   {emoji:'🥤', pl:'Słomka', en:'Straw', others:['staw', 'drinking straw', 'slomka']},
   {emoji:'🍸', pl:'Wykałaczka', en:'Toothpick', others:['coctail', 'martini glass', 'wykalaczka']},
   {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['chopstiks', 'wooden chopsticks', 'paleczki']},
   {emoji:'🍴', pl:'Sztućce', en:'Cutlery', others:['cuttlery', 'fork and knife', 'sztucce']},
-  {emoji:'🍽️', pl:'Talerz', en:'Plate', others:['plait', 'dinner plate', 'talerz']}
+  {emoji:'🍽️', pl:'Talerz', en:'Plate', others:['plait', 'dinner plate', 'talerz']},
+  {emoji:'🚌', pl:'Autobus', en:'Bus', others:['buss', 'public bus', 'autobus']},
+  {emoji:'🚂', pl:'Lokomotywa', en:'Locomotive', others:['locomotiv', 'steam engine', 'lokomotywa']},
+  {emoji:'🚊', pl:'Tramwaj', en:'Tram', others:['tramm', 'streetcar', 'tramwaj']},
+  {emoji:'🚆', pl:'Pogiąg', en:'Train', others:['trane', 'rail train', 'pociag']},
+  {emoji:'🚢', pl:'Statek', en:'Ship', others:['shipp', 'cargo ship', 'statek']},
+  {emoji:'🛳️', pl:'Wycieczkowiec', en:'Cruise Ship', others:['cruize ship', 'ocean liner', 'wycieczkowiec']},
+  {emoji:'🛥️', pl:'Łódka', en:'Boat', others:['boatt', 'motor boat', 'lodka']},
+  {emoji:'🚤', pl:'Motorówka', en:'Speedboat', others:['speed bote', 'fast boat', 'motorowka']}
      ],
-     medium:[
+     hard:[
+  {emoji:'🚕', pl:'Taxi', en:'Taxi', others:['taxii', 'cab', 'taxi']},
   {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:['teepot', 'ceramic teapot', 'czajnik']},
-  {emoji:'🍹', pl:'Koktajl', en:'Cocktail', others:['coctel', 'fruit cocktail', 'koktajl']},
   {emoji:'🥄', pl:'Łyżka', en:'Spoon', others:['spone', 'silver spoon', 'lyzka']},
   {emoji:'🔪', pl:'Nóż', en:'Knife', others:['knive', 'sharp knife', 'noz']},
   {emoji:'🥐', pl:'Rogalik', en:'Croissant', others:['croisant', 'french croissant', 'rogalik']},
@@ -138,11 +176,9 @@
   {emoji:'🥓', pl:'Bekon', en:'Bacon', others:['baconn', 'crispy bacon', 'bekon']},
   {emoji:'🍝', pl:'Spaghetti', en:'Spaghetti', others:['spagetti', 'italian spaghetti', 'spagetti']},
   {emoji:'🥫', pl:'Puszka', en:'Can', others:['cann', 'food can', 'puszka']},
-  {emoji:'🥡', pl:'Pudełko na Wynos', en:'Takeout Box', others:['take out box', 'chinese takeout', 'pudelko na wynos']},
+  {emoji:'🥡', pl:'Pudełko na Wynos', en:'Takeout Box', others:['take out box', 'chinese takeout', 'pudelko na wynos', 'takeaway box']},
   {emoji:'🥟', pl:'Pieróg', en:'Dumpling', others:['dumplling', 'chinese dumpling', 'pierog']},
-  {emoji:'🍢', pl:'Szaszłyk', en:'Skewer', others:['skever', 'meat skewer', 'szaszlyk']},
   {emoji:'🍭', pl:'Lizak', en:'Lollipop', others:['loly pop', 'sweet lollipop', 'lizak']},
-  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata']},
   {emoji:'🧄', pl:'Czosnek', en:'Garlic', others:['garlick', 'clove of garlic', 'czosnek']},
   {emoji:'🦏', pl:'Nosorożec', en:'Rhinoceros', others:['rhino', 'rhinno', 'nosorozec']},
   {emoji:'🐿️', pl:'Wiewiórka', en:'Squirrel', others:['squirel', 'tree squirrel', 'wiewiorka']},
@@ -153,8 +189,6 @@
   {emoji:'🥜', pl:'Orzeszek', en:'Peanut', others:['peanutt', 'groundnut', 'orzeszek']},
   {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['cocnut', 'fresh coconut', 'kokos']},
   {emoji:'🍯', pl:'Miód', en:'Honey', others:['hony', 'sweet honey', 'miod']},
-     ],
-     hard:[
   {emoji:'🍠', pl:'Batat', en:'Sweet Potato', others:['sweet potatto', 'yam', 'batat']},
   {emoji:'🍺', pl:'Piwo', en:'Beer', others:['bear', 'glass of beer', 'piwo']},
   {emoji:'🍾', pl:'Szampan', en:'Champagne', others:['champain', 'bottle of champagne', 'szampan']},
