--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
                 <span>Wędkarstwo</span>
             </a>
-            <a href="20250815_emotkisolo.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993032/emotkisolo_wknxl8.png" alt="Emotki">
-                <span>Emotki</span>
+            <a href="20250812_emotkiflagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
+                <span>Flagi</span>
             </a>
             <a href="20250617_kosmicznykwadrat.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
