--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,20 +121,58 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'🚧', pl:'Blokada', en:'Roadblock', others:['rodblock', 'construction barrier', 'blokada']},
+  {emoji:'⛵', pl:'Żaglówka', en:'Sailboat', others:['sailbote', 'sailing boat', 'zaglówka']},
+  {emoji:'🛶', pl:'Kajak', en:'Canoe', others:['canoo', 'kayak', 'kajak']},
+  {emoji:'🛫', pl:'Wylot', en:'Departure', others:['deparure', 'take off', 'wylot']},
+  {emoji:'🛬', pl:'Lądowanie', en:'Landing', others:['landig', 'arrival', 'ladowanie']},
+  {emoji:'🎢', pl:'Kolejka Górska', en:'Roller Coaster', others:['roler coaster', 'fun ride', 'kolejka gorska']},
+  {emoji:'🎡', pl:'Diabelski Młyn', en:'Ferris Wheel', others:['ferris weel', 'observation wheel', 'diabelski mlyn']},
+  {emoji:'🎠', pl:'Karuzela', en:'Carousel', others:['carousell', 'merry-go-round', 'karuzela']},
+  {emoji:'🎪', pl:'Cyrk', en:'Circus', others:['cirqus', 'big top', 'cyrk']},
+  {emoji:'🕍', pl:'Synagoga', en:'Synagogue', others:['sinagogue', 'jewish temple', 'synagoga']},
+  {emoji:'🕌', pl:'Meczet', en:'Mosque', others:['mosqe', 'islamic mosque', 'meczet']},
+  {emoji:'🕋', pl:'Kaaba', en:'Kaaba', others:['kaabaa', 'holy kaaba', 'kaaba']},
+  {emoji:'🏗️', pl:'Dźwig', en:'Crane', others:['building crain', 'construction crane', 'dzwig']},
+  {emoji:'🏢', pl:'Blok', en:'Apartment Building', others:['offis building', 'apartment block', 'blok']}
+     ],
+     medium:[
+  {emoji:'🚡', pl:'Kolejka Linowa', en:'Cable Car', others:['cabel car', 'aerial tramway', 'kolejka linowa']},
+  {emoji:'🛸', pl:'Kosmiczny Spodek', en:'UFO', others:['ufo', 'flying saucer', 'kosmiczny spodek']},
+  {emoji:'🚀', pl:'Rakieta', en:'Rocket', others:['rokcet', 'space rocket', 'rakieta']},
+  {emoji:'✈️', pl:'Samolot', en:'Airplane', others:['airplane', 'plane', 'samolot']},
+  {emoji:'🗽', pl:'Statua', en:'Statue', others:['statue of liberty', 'liberty statue', 'statua']},
+  {emoji:'🗿', pl:'Pomnik', en:'Monument', others:['moaai', 'stone statue', 'pomnik']},
+  {emoji:'🗻', pl:'Szczyt', en:'Peak', others:['mount fuji', 'mountain peak', 'szczyt']},
+  {emoji:'⛲', pl:'Fontanna', en:'Fountain', others:['fountan', 'water fountain', 'fontanna']},
+  {emoji:'🛕', pl:'Świątynia', en:'Temple', others:['hindu tempel', 'temple', 'swiatynia']},
+  {emoji:'🏭', pl:'Fabryka', en:'Factory', others:['faktory', 'industrial factory', 'fabryka']},
+  {emoji:'🏪', pl:'Sklep', en:'Supermarket', others:['convinience store', 'shop', 'sklep']},
+  {emoji:'🗼', pl:'Wieża', en:'Tower', others:['towar', 'observation tower', 'wieza']},
+  {emoji:'🚁', pl:'Helikopter', en:'Helicopter', others:['helicopterr', 'chopper', 'helikopter']},
   {emoji:'⛽', pl:'Stacja Paliw', en:'Fuel Station', others:['fuel staton', 'gas station', 'stacja paliw']},
   {emoji:'🛢️', pl:'Beczka', en:'Barrel', others:['barel', 'oil barrel', 'beczka']},
-  {emoji:'🧭', pl:'Kompas', en:'Compass', others:['compas', 'navigation compass', 'kompas']},
   {emoji:'⚓', pl:'Kotwica', en:'Anchor', others:['anhor', 'ship anchor', 'kotwica']},
   {emoji:'🚇', pl:'Metro', en:'Subway', others:['subwey', 'metro station', 'metro']},
   {emoji:'🚦', pl:'Światła', en:'Traffic Lights', others:['trafic lights', 'signal lights', 'swietla']},
   {emoji:'🦼', pl:'Manualny Wózek Inwalidzki', en:'Mobility Scooter', others:['mobility scoter', 'disabled scooter', 'pojazd dla niepelnosprawnych']},
   {emoji:'🚐', pl:'Bus', en:'Van', others:['vann', 'minibus', 'bus']},
   {emoji:'🛺', pl:'Melex', en:'Rickshaw', others:['rikshaw', 'auto rickshaw', 'melex']},
-     ],
-     medium:[
-  {emoji:'🛵', pl:'Skuter', en:'Scooter', others:['motorscoter', 'scooter bike', 'skuter', 'Motor Scooter']},
   {emoji:'🏍️', pl:'Motor', en:'Motorcycle', others:['motorcicle', 'bike motorcycle', 'motor']},
+  {emoji:'🍢', pl:'Szaszłyk', en:'Skewer', others:['skever', 'meat skewer', 'szaszlyk']},
+  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata', 'salad']},
+  {emoji:'🍸', pl:'Wykałaczka', en:'Toothpick', others:['coctail', 'martini glass', 'wykalaczka']},
+  {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['chopstiks', 'wooden chopsticks', 'paleczki']},
+  {emoji:'🍴', pl:'Sztućce', en:'Cutlery', others:['cuttlery', 'fork and knife', 'sztucce']},
+  {emoji:'🚤', pl:'Motorówka', en:'Speedboat', others:['speed bote', 'fast boat', 'motorowka']}
+     ],
+     hard:[
+  {emoji:'🏛️', pl:'Muzeum', en:'Museum', others:['clasical building', 'museum', 'muzeum']},
+  {emoji:'⛪', pl:'Kościół', en:'Church', others:['churh', 'chapel', 'kosciol']},
+  {emoji:'🏰', pl:'Zamek', en:'Castle', others:['castel', 'fortress', 'zamek']},
+  {emoji:'🏟️', pl:'Stadion', en:'Stadium', others:['stadium', 'arena', 'stadion']},
+  {emoji:'🏦', pl:'Bank', en:'Bank', others:['bankk', 'financial bank', 'bank']},
+  {emoji:'🧭', pl:'Kompas', en:'Compass', others:['compas', 'navigation compass', 'kompas']},
+  {emoji:'🚧', pl:'Blokada', en:'Roadblock', others:['rodblock', 'construction barrier', 'blokada']},
   {emoji:'🛑', pl:'Znak', en:'Sign', others:['stop signe', 'traffic sign', 'znak', 'Stop Sign']},
   {emoji:'🚨', pl:'Kogut Policyjny', en:'Police Light', others:['police ligt', 'emergency light', 'kogut policyjny']},
   {emoji:'🚏', pl:'Przystanek', en:'Bus Stop', others:['buss stop', 'station sign', 'przystanek']},
@@ -149,13 +187,8 @@
   {emoji:'🚓', pl:'Policja', en:'Police Car', others:['police carr', 'cop car', 'policja']},
   {emoji:'🚙', pl:'Samochód', en:'Car', others:['carr', 'family car', 'samochod']},
   {emoji:'🍹', pl:'Koktajl', en:'Cocktail', others:['coctel', 'fruit cocktail', 'koktajl']},
-  {emoji:'🍢', pl:'Szaszłyk', en:'Skewer', others:['skever', 'meat skewer', 'szaszlyk']},
-  {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata', 'salad']},
   {emoji:'🥣', pl:'Miska', en:'Bowl', others:['bolw', 'soup bowl', 'miska']},
   {emoji:'🥤', pl:'Słomka', en:'Straw', others:['staw', 'drinking straw', 'slomka']},
-  {emoji:'🍸', pl:'Wykałaczka', en:'Toothpick', others:['coctail', 'martini glass', 'wykalaczka']},
-  {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['chopstiks', 'wooden chopsticks', 'paleczki']},
-  {emoji:'🍴', pl:'Sztućce', en:'Cutlery', others:['cuttlery', 'fork and knife', 'sztucce']},
   {emoji:'🍽️', pl:'Talerz', en:'Plate', others:['plait', 'dinner plate', 'talerz']},
   {emoji:'🚌', pl:'Autobus', en:'Bus', others:['buss', 'public bus', 'autobus']},
   {emoji:'🚂', pl:'Lokomotywa', en:'Locomotive', others:['locomotiv', 'steam engine', 'lokomotywa']},
@@ -164,9 +197,7 @@
   {emoji:'🚢', pl:'Statek', en:'Ship', others:['shipp', 'cargo ship', 'statek']},
   {emoji:'🛳️', pl:'Wycieczkowiec', en:'Cruise Ship', others:['cruize ship', 'ocean liner', 'wycieczkowiec']},
   {emoji:'🛥️', pl:'Łódka', en:'Boat', others:['boatt', 'motor boat', 'lodka']},
-  {emoji:'🚤', pl:'Motorówka', en:'Speedboat', others:['speed bote', 'fast boat', 'motorowka']}
-     ],
-     hard:[
+  {emoji:'🛵', pl:'Skuter', en:'Scooter', others:['motorscoter', 'scooter bike', 'skuter', 'Motor Scooter']},
   {emoji:'🚕', pl:'Taxi', en:'Taxi', others:['taxii', 'cab', 'taxi']},
   {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:['teepot', 'ceramic teapot', 'czajnik']},
   {emoji:'🥄', pl:'Łyżka', en:'Spoon', others:['spone', 'silver spoon', 'lyzka']},
