--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,21 +121,74 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
+  {emoji:'🎀', pl:'Kokarda', en:'Bow', others:['boow', 'ribbon bow', 'kokarda']},
+  {emoji:'🎇', pl:'Fajerwerki', en:'Fireworks', others:['firewroks', 'sparklers', 'fajerwerki']},
+  {emoji:'🧨', pl:'Dynamit', en:'Firecracker', others:['firecracer', 'dynamite', 'dynamit']},
+  {emoji:'🎄', pl:'Choinka', en:'Christmas Tree', others:['christams tree', 'xmas tree', 'choinka']},
+  {emoji:'🎗️', pl:'Wstążka', en:'Ribbon', others:['ribonn', 'awareness ribbon', 'wstazka']},
+  {emoji:'🎖️', pl:'Odznaka', en:'Badge', others:['militry medal', 'badge of honor', 'odznaka']},
+  {emoji:'📢', pl:'Megafon', en:'Loudspeaker', others:['loudspeeker', 'megaphone', 'megafon']},
+  {emoji:'🥅', pl:'Bramka', en:'Goal Net', others:['goalnet', 'soccer goal', 'bramka']},
+  {emoji:'🛷', pl:'Sanki', en:'Sled', others:['sledd', 'snow sled', 'sanki']},
+  {emoji:'🛤️', pl:'Tory Kolejowe', en:'Railway Track', others:['railwai track', 'train track', 'tory kolejowe']},
+  {emoji:'🛖', pl:'Schronisko Górskie', en:'Mountain Shelter', others:['huttt', 'mountain shelter', 'schronisko gorskie', 'hut']},
+  {emoji:'🏚️', pl:'Zrójnowany Budynek', en:'Derelict House', others:['derelic house', 'ruined building', 'zrojnowany budynek']}
+     ],
+     medium:[
+  {emoji:'🎈', pl:'Balon', en:'Balloon', others:['ballon', 'party balloon', 'balon']},
+  {emoji:'🎁', pl:'Prezent', en:'Gift', others:['gft', 'present box', 'prezent']},
+  {emoji:'🥇', pl:'Złoty Medal', en:'Gold Medal', others:['gold madal', '1st place medal', 'zloty medal']},
+  {emoji:'🥈', pl:'Srebrny Medal', en:'Silver Medal', others:['silvr medal', '2nd place medal', 'srebrny medal']},
+  {emoji:'🥉', pl:'Brązowy Medal', en:'Bronze Medal', others:['bronce medal', '3rd place medal', 'brazowy medal']},
+  {emoji:'🏅', pl:'Medal', en:'Medal', others:['medall', 'award medal', 'medal']},
+  {emoji:'🏆', pl:'Puchar', en:'Trophy', others:['trofhy', 'championship cup', 'puchar', 'cup']},
+  {emoji:'⚽', pl:'Piłka Nożna', en:'Soccer Ball', others:['socer ball', 'football', 'pilka nozna']},
+  {emoji:'⚾', pl:'Baseball', en:'Baseball', others:['baseboll', 'baseball ball', 'bejsbol']},
+  {emoji:'🥎', pl:'Softball', en:'Softball', others:['softboll', 'softball ball', 'softbal']},
+  {emoji:'🏀', pl:'Koszykówka', en:'Basketball', others:['basketbal', 'basketball ball', 'koszykowka']},
+  {emoji:'🏐', pl:'Siatkówka', en:'Volleyball', others:['volleybal', 'volley ball', 'siatkowka']},
+  {emoji:'🏈', pl:'Futbol Amerykański', en:'American Football', others:['americn football', 'football ball', 'futbol amerykanski']},
+  {emoji:'🏉', pl:'Rugby', en:'Rugby', others:['rugbi', 'rugby ball', 'rugbi']},
+  {emoji:'🎾', pl:'Tenis', en:'Tennis', others:['tennis', 'tennis ball', 'tenis']},
+  {emoji:'🏸', pl:'Badminton', en:'Badminton', others:['badmiton', 'shuttle game', 'badminton']},
+  {emoji:'🥍', pl:'Lacrosse', en:'Lacrosse', others:['lacros', 'stick game', 'lacroose']},
+  {emoji:'🏏', pl:'Krykiet', en:'Cricket', others:['criket', 'cricket game', 'krykiet']},
+  {emoji:'🏑', pl:'Hokej na Trawie', en:'Field Hockey', others:['feeld hockey', 'grass hockey', 'hokej na trawie']},
+  {emoji:'🏒', pl:'Hokej na Lodzie', en:'Ice Hockey', others:['ice hocky', 'hockey on ice', 'hokej na lodzie']},
+  {emoji:'🥌', pl:'Curling', en:'Curling', others:['curlling', 'curling stone', 'curling']},
+  {emoji:'🎿', pl:'Narty', en:'Skis', others:['skies', 'skiing', 'narty']},
+  {emoji:'⛸️', pl:'Łyżwy', en:'Ice Skates', others:['ice skatess', 'skating shoes', 'lyzwy']},
+  {emoji:'🛼', pl:'Rolki', en:'Roller Skates', others:['roler skates', 'inline skates', 'rolki']},
+  {emoji:'🩰', pl:'Buty do Baletu', en:'Ballet Shoes', others:['ballet shooes', 'pointe shoes', 'buty do baletu']},
+  {emoji:'🎡', pl:'Diabelski Młyn', en:'Ferris Wheel', others:['ferris weel', 'observation wheel', 'diabelski mlyn']},
+  {emoji:'🕍', pl:'Synagoga', en:'Synagogue', others:['sinagogue', 'jewish temple', 'synagoga']},
+  {emoji:'🎪', pl:'Cyrk', en:'Circus', others:['cirqus', 'big top', 'cyrk']},
+  {emoji:'🍴', pl:'Sztućce', en:'Cutlery', others:['cuttlery', 'fork and knife', 'sztucce']},
+  {emoji:'🏫', pl:'Szkoła', en:'School', others:['scholl', 'education building', 'szkola']},
+  {emoji:'🏤', pl:'Poczta', en:'Post Office', others:['post ofice', 'mail office', 'poczta']},
+  {emoji:'🏥', pl:'Szpital', en:'Hospital', others:['hosptal', 'medical center', 'szpital']},
+  {emoji:'🏠', pl:'Dom', en:'House', others:['houze', 'home', 'dom']},
+  {emoji:'⛺', pl:'Namiot', en:'Tent', others:['tennt', 'camp tent', 'namiot']},
+  {emoji:'🏕️', pl:'Pole Namiotowe', en:'Camping Site', others:['campin', 'campground', 'pole namiotowe', 'camping']},
+  {emoji:'🏙️', pl:'Miasto', en:'City', others:['cityscae', 'urban view', 'miasto']},
+  {emoji:'🌃', pl:'Noc', en:'Night', others:['nigth', 'night sky', 'noc']},
+  {emoji:'🌉', pl:'Most', en:'Bridge', others:['bridge at night', 'night bridge', 'most']},
+  {emoji:'🛣️', pl:'Droga', en:'Motorway', others:['motorwai', 'highway', 'droga', 'way']},
+  {emoji:'🗺️', pl:'Mapa', en:'Map', others:['mapp', 'world map', 'mapa']},
+  {emoji:'💺', pl:'Siedzenie', en:'Seat', others:['seet', 'chair', 'siedzenie']},
+  {emoji:'🧳', pl:'Walizka', en:'Luggage', others:['lugage', 'suitcase', 'walizka']}
+     ],
+     hard:[
   {emoji:'⛵', pl:'Żaglówka', en:'Sailboat', others:['sailbote', 'sailing boat', 'zaglówka']},
   {emoji:'🛶', pl:'Kajak', en:'Canoe', others:['canoo', 'kayak', 'kajak']},
   {emoji:'🛫', pl:'Wylot', en:'Departure', others:['deparure', 'take off', 'wylot']},
   {emoji:'🛬', pl:'Lądowanie', en:'Landing', others:['landig', 'arrival', 'ladowanie']},
   {emoji:'🎢', pl:'Kolejka Górska', en:'Roller Coaster', others:['roler coaster', 'fun ride', 'kolejka gorska']},
-  {emoji:'🎡', pl:'Diabelski Młyn', en:'Ferris Wheel', others:['ferris weel', 'observation wheel', 'diabelski mlyn']},
   {emoji:'🎠', pl:'Karuzela', en:'Carousel', others:['carousell', 'merry-go-round', 'karuzela']},
-  {emoji:'🎪', pl:'Cyrk', en:'Circus', others:['cirqus', 'big top', 'cyrk']},
-  {emoji:'🕍', pl:'Synagoga', en:'Synagogue', others:['sinagogue', 'jewish temple', 'synagoga']},
   {emoji:'🕌', pl:'Meczet', en:'Mosque', others:['mosqe', 'islamic mosque', 'meczet']},
   {emoji:'🕋', pl:'Kaaba', en:'Kaaba', others:['kaabaa', 'holy kaaba', 'kaaba']},
   {emoji:'🏗️', pl:'Dźwig', en:'Crane', others:['building crain', 'construction crane', 'dzwig']},
-  {emoji:'🏢', pl:'Blok', en:'Apartment Building', others:['offis building', 'apartment block', 'blok']}
-     ],
-     medium:[
+  {emoji:'🏢', pl:'Blok', en:'Apartment Building', others:['offis building', 'apartment block', 'blok']},
   {emoji:'🚡', pl:'Kolejka Linowa', en:'Cable Car', others:['cabel car', 'aerial tramway', 'kolejka linowa']},
   {emoji:'🛸', pl:'Kosmiczny Spodek', en:'UFO', others:['ufo', 'flying saucer', 'kosmiczny spodek']},
   {emoji:'🚀', pl:'Rakieta', en:'Rocket', others:['rokcet', 'space rocket', 'rakieta']},
@@ -162,10 +215,7 @@
   {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['letuce', 'fresh lettuce', 'salata', 'salad']},
   {emoji:'🍸', pl:'Wykałaczka', en:'Toothpick', others:['coctail', 'martini glass', 'wykalaczka']},
   {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['chopstiks', 'wooden chopsticks', 'paleczki']},
-  {emoji:'🍴', pl:'Sztućce', en:'Cutlery', others:['cuttlery', 'fork and knife', 'sztucce']},
-  {emoji:'🚤', pl:'Motorówka', en:'Speedboat', others:['speed bote', 'fast boat', 'motorowka']}
-     ],
-     hard:[
+  {emoji:'🚤', pl:'Motorówka', en:'Speedboat', others:['speed bote', 'fast boat', 'motorowka']},
   {emoji:'🏛️', pl:'Muzeum', en:'Museum', others:['clasical building', 'museum', 'muzeum']},
   {emoji:'⛪', pl:'Kościół', en:'Church', others:['churh', 'chapel', 'kosciol']},
   {emoji:'🏰', pl:'Zamek', en:'Castle', others:['castel', 'fortress', 'zamek']},
