--- a/inne.html
+++ b/inne.html
@@ -196,6 +196,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
                 <span>Emotki</span>
             </a>
+            <a href="testy.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
+                <span>Testy</span>
+            </a>
         </div>
     </div>
 <script>
